# jdk-21-crash

./: .gitignore  README.md
java/: pom.xml
java/src/main/java/com/github/psnrigner/jdk21crash/: ClassLoadHook.java  Main.java
native/: CMakeLists.txt  CustomJVMTI.cpp  CustomJVMTI.h  dllmain.cpp  dllmain.h  jvmagent.cpp  jvmagent.h
